plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    app: plex
  type: ClusterIP
  ports:
  - name: plex-port
    protocol: TCP
    port: 32400
    targetPort: 32400
